# ai-berkshire

ai-agent/: .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml
ai-agent/agent/: __init__.py  chat_agent.py  runner.py  skills_catalog.py  tools_catalog.py
ai-agent/frontend/: index.html  package-lock.json  package.json
ai-agent/frontend/scripts/: verify-markdown-render.mjs
ai-agent/frontend/src/: App.tsx  api.ts  styles.css  types.ts
ai-agent/scripts/: verify_final_report_only.py  verify_research_report_tool.py
ai-agent/server/: app.py
ai-agent/skills/: bottleneck-hunter.md  deep-company-series.md  earnings-review.md  earnings-team.md  industry-funnel.md  industry-research.md  investment-checklist.md  investment-research.md  investment-team.md  management-deep-dive.md  news-pulse.md  portfolio-review.md  private-company-research.md  thesis-tracker.md  wechat-article.md
ai-agent/web/: __init__.py  app.py  db.py  history.py  login.py  research.py
ai-agent/web/components/: chat_input.py  execution_log.py  report_view.py
reports/: 立讯精密投资研究报告.md  苹果产业链上游投资研究报告.md
reports/Nabtesco/: Nabtesco-research-20260626.md
reports/bottleneck-map/: master-map.md  watchlist.md  机器人产业链-bottleneck-20260626.md
reports/腾讯/《看懂腾讯》/: 03-游戏-14款长青和海外突围.md
