[project]
name = "ai-berkshire-agent"
version = "0.1.0"
description = "独立金融分析 Agent — 复用 ai-berkshire 的 skills 和 tools，DeepSeek + LangChain 驱动"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "pyyaml>=6",
    "rich>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
